--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Caixa Econômica Federal</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/media-query.css">
 </head>
 <body>
     <div class="container">
@@ -15,12 +16,20 @@
         </div>
         <div class="email">
             <input type="text" name="user" id="iuser" placeholder="E-mail" autocomplete="email" minlength="4" maxlength="30" required>
+
+            <p class="erro">
+
+            </p>
         </div>
         <div class="senha">
             <input type="password" name="senha" id="isenha" placeholder="Senha" autocomplete="current-password" required min="8" max="20">
+
+            <p class="erro2">
+
+            </p>
         </div>
         <div class="botao">
-            <a id="botao" href="error.html">Logar-se</a>
+            <a id="botao" href="#" onclick="logar()">Logar-se</a>
         </div>
         <div class="cadastro">
             <p>Ainda não se cadastrou? <strong><a href="cadastro.html">cadastre-se já aqui!</a></strong></p>
@@ -28,7 +37,24 @@
     </div>
 
     <script>
-        
+        function logar(){
+        var email = document.querySelector('input#iuser').value
+
+        var senha = document.querySelector('input#isenha').value
+
+        if (email === "" || senha === ""){
+           var erro = [
+            document.querySelector('p.erro').innerHTML = `Seu email está incorreto`,
+            document.querySelector('p.erro2').innerHTML = `Sua senha está incorreta`
+]
+            document.querySelector('p.erro').style.color = 'red';
+
+            document.querySelector('p.erro2').style.color = 'red';
+
+        }else{
+            document.querySelector('a#botao').href = 'error.html'
+        }
+        }
     </script>
 </body>
 </html>
